bootstrap/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  labels:
    cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
spec:
  rules:
  - host: argocd.flowgenie.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
  tls:
  - hosts:
    - argocd.flowgenie.de
    secretName: argocd-secret
